security: scope approvals and mail, move avatars off the user row
Approvals
- The pending queue listed every user in the database, so an
  administrator of one university could see and act on another's
  accounts. It is now scoped, and approving or rejecting asserts the
  target belongs to the approver's university.

Metadata
- New options were saved without a university, so they belonged to no
  tenant and never appeared in the scoped lookups behind the signup form.
  They now record one, deletion checks it, and reads are filtered by it.
- SECTION was missing from the accepted types even though the signup form
  offers it.

Mail
- Any address was accepted, which allowed mail to be sent from the
  institution's identity to anyone. Recipients must now be registered
  accounts within the sender's own university, and the recipient list is
  scoped the same way.
- Delivery failures no longer return the mail server's message, which can
  name the host and the account used.

Profile pictures
- Images were accepted as an arbitrary string into an unbounded TEXT
  column and rendered straight into an img tag's src, so the field was
  both a storage risk and a cross-site scripting vector.
- Migration V3 adds profile_pic_key and clears any base64 already stored.
  Uploads are now decoded, checked to be a PNG, JPEG, GIF or WebP within
  2 MB, and written to the storage root like any other file. The column
  holds a path served by the new avatar endpoint, which is limited to
  members of the caller's university. Replacing an avatar removes the
  previous file.
- Profile responses no longer serialize the user entity.

Verification
- 106 tests pass. Confirmed against a running instance that a valid PNG is
  stored on disk and served back, and that a javascript: URL, an attribute
  breakout attempt and a text/html data URL are each rejected. All
  endpoints across the five roles still answer, with no lazy-loading
  failures and no server errors.

Co-Authored-By: Claude Opus 4.8 <no